--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,3 +1,4 @@
+    <!-- load our javascript resources at the end -->
     <script src="bower_components/jsr-mocks/dist/jsr-mocks.js"></script>
     <script src="js/main.js"></script>
     <script src="js/module.js"></script>
