--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -16,4 +16,4 @@
         <link rel="stylesheet" href="css/main.css" />
     </head>
     <script src="bower_components/jquery/dist/jquery.js"></script>
-    <h1>My local page that thinks it is a VF Page</h1>
+    <h1>My HTML Page with jsr-mocks</h1>
