--- a/src/templates/body.html
+++ b/src/templates/body.html
@@ -12,7 +12,7 @@
 
     <script>
     var $config = {
-
+        vf : false,
         jsr: {
             myFunction :'{!$RemoteAction.SPA.myFunction}',
             myOtherFunction :'{!$RemoteAction.SPA.myOtherFunction}'
