--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,5 +1,6 @@
     <!-- load our javascript resources at the end -->
     <script src="bower_components/jsr-mocks/dist/jsr-mocks.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/module.js"></script>
+
+
+    <script src="js/all_scripts.js"></script>
 </html>
