fix img bug on vf

--- a/src/templates/body.html
+++ b/src/templates/body.html
@@ -18,7 +18,7 @@
             myOtherFunction :'{!$RemoteAction.SPA.myOtherFunction}'
         },
         img: {
-            '.loading' : "{!URLFOR($Resource.spa_sample, 'img/loading.gif')}"
+            '_base' : "{!URLFOR($Resource.spa_sample, 'img/loading.gif')}"
         },
         mocks :{
             '{!$RemoteAction.SPA.myFunction}' : {
