--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -18,5 +18,10 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
 </head>
+
+<!--[if lt IE 7]>
+    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+<![endif]-->
+
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <h1>My HTML Page with jsr-mocks</h1>
