--- a/src/templates/body.html
+++ b/src/templates/body.html
@@ -5,8 +5,10 @@
 <div id="ready" class="ready">I am ready already</div>
 <div id="ready2" class="ready"><img src="img/loading.gif" alt="" class="loading"/></div>
 <div id="ready3" class="ready"><img src="img/loading.gif" alt="" class="loading"/></div>
+<div id="ready4" class="ready"><img src="img/loading.gif" alt="" class="loading"/></div>
 
 <button id="do">do it!</button>
+<input id="input" type="text" placeholder="type here"/>
 
 <script>
 var $config = {
